[package]
name = "dca-onchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
web3 = "0.18.0"
orion = "0.16.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
ethers = { version = "2.0.3", features = ["abigen", "ws", "rustls"] }
tiny-keccak = "2.0"
rustc-hex = "2.0"
anyhow = "1.0"
getrandom = { version = "0.2.9", features = ["wasm-bindgen", "js"] }
bs58 = "0.4"
directories = "5.0"
rpassword = "7.2.0"
chrono = "0.4.24"
clap = { version = "4.2.4", features = ["derive"] }