[package]
name = "uniswap-cli"
version = "0.2.0"
edition = "2021"
description = "A command line interface for swapping tokens with Uniswap V3"
authors = ["@azerpas"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/azerpas/uniswap-cli"
keywords = ["uniswap", "cli", "ethereum", "eth", "erc20", "swap", "trade", "token", "defi", "decentralized", "finance", "uniswap v3" ]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
web3 = "0.18.0"
orion = "0.16.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
ethers = { version = "2.0.3", features = ["abigen", "ws", "rustls"] }
tiny-keccak = "2.0"
rustc-hex = "2.0"
anyhow = "1.0"
getrandom = { version = "0.2.9", features = ["wasm-bindgen", "js"] }
bs58 = "0.4"
directories = "5.0"
rpassword = "7.2.0"
chrono = "0.4.24"
clap = { version = "4.2.4", features = ["derive"] }
reqwest = { version = "0.11.4", features = ["json"] }
dotenv = "0.15.0"
num-format = "0.4.0"
